fixed css for splash beta subscribe wrap:

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -131,7 +131,7 @@ a.sb.gplus,
 
 .subscribe_wrap {
 	position: relative;
-	width: 328px;
+	width: 330px;
 	margin: 0 auto;
 }
 
